--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!doctype html>
 <html>
   <head>
-      <title>WebGL 2.0 Baseline</title>
+      <title>Corpus Hacking</title>
       <style>
         html, body {
           margin: 0;
           overflow: hidden;
         }
         #canvas {
+          position:absolute;
           width: 100%;
           height: 100%;
+          z-index: 1;
+        }
+        #overlay {
+          position:relative;
+          width: 100%;
+          height: 100%;
+          z-index: 2;
         }
       </style>
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <canvas id="overlay" width="500" height="500"></canvas>
     <script type="text/javascript" src="dist/bundle.js"></script>
   </body>
 </html>
